<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--android.support.v7.widget.Toolbar
        android:id="@+id/my_awesome_toolbar"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:minHeight="?attr/actionBarSize"
    android:background="?attr/colorPrimary" /-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/action_title"
        android:id="@+id/mainTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="64dp"
        android:layout_marginStart="64dp"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/button_spotify"
        android:id="@+id/btn_spotify"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:onClick="runSpotify"
        android:layout_width="match_parent"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_scores"
        android:id="@+id/btn_scores"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:onClick="runScores"
        android:layout_weight="1"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_library"
        android:id="@+id/btn_library"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:onClick="runLibrary"
        android:layout_weight="1"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_bigger"
        android:id="@+id/btn_bigger"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:onClick="runBigger"
        android:layout_weight="1"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_xyz"
        android:id="@+id/btn_xyz"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:onClick="runXYZ"
        android:layout_weight="1"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_capstone"
        android:id="@+id/btn_capstone"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:onClick="runCapstone"
        android:layout_weight="1"/>



</LinearLayout>
